# Doio-Keyboard

./: Doio.7z  Doio.sln  Doio2.7z  README.md
Doio/: AdminHelper.h  CMakeLists.txt  Doio.cpp  Doio.h  Doio.rc  Doio.vcxproj  Doio.vcxproj.filters  KeyboardConfig.cpp  KeyboardConfig.h  KeyboardEditor.cpp  KeyboardEditor.h  KeyboardEditor_changes.cpp  KeycodeDefs.h  Keytest.cpp  Keytest.h  LedScheme.h  MacroLibrary.h  Resource.h  SessionState.h  font.cpp  vcpkg.json
mapping/: build.bat  keycodes.json  map.bat  map.py
